# src/mass/adapters/inbound/fastapi_/routes.py
@@ -16,10 +16,11 @@
 
 """API endpoints"""
 
-from fastapi import APIRouter, status
+from typing import Annotated
+
+from fastapi import APIRouter, Query, status
 from fastapi.exceptions import HTTPException
 
-from mass.adapters.inbound.fastapi_ import models as api_models
 from mass.adapters.inbound.fastapi_.dummies import ConfigDummy, QueryHandlerDummy
 from mass.core import models
 
@@ -53,24 +54,68 @@ async def search_options(
     return config.searchable_classes
 
 
-@router.post(
+@router.get(
     path="/rpc/search",
     summary="Perform a search using query string and filter parameters",
     response_model=models.QueryResults,
 )
-async def search(
-    parameters: api_models.SearchParameters,
+async def search(  # noqa: PLR0913
     query_handler: QueryHandlerDummy,
+    class_name: Annotated[str, Query(description="The class name to search")],
+    query: Annotated[str, Query(description="The keyword search for the query")] = "",
+    filter_by: Annotated[
+        list[str] | None,
+        Query(description="Field(s) that shall be used for filtering results"),
+    ] = None,
+    value: Annotated[
+        list[str] | None,
+        Query(description="Values(s) that shall be used for filtering results"),
+    ] = None,
+    skip: Annotated[
+        int, Query(description="The number of results to skip for pagination")
+    ] = 0,
+    limit: Annotated[
+        int | None, Query(description="Limit the results to this number")
+    ] = None,
+    order_by: Annotated[
+        list[str] | None,
+        Query(description="Field(s) that shall be used for sorting results"),
+    ] = None,
+    sort: Annotated[
+        list[models.SortOrder] | None,
+        Query(description="Sort order(s) that shall be used when sorting results"),
+    ] = None,
 ) -> models.QueryResults | None:
     """Perform search query"""
+    if not class_name:
+        raise HTTPException(status_code=422, detail="A class name must be specified")
+    try:
+        filters = [
+            models.Filter(key=field, value=value)
+            for field, value in zip(filter_by or [], value or [], strict=True)
+        ]
+    except ValueError as err:
+        detail = "Number of fields to filter by must match number of values"
+        raise HTTPException(status_code=422, detail=detail) from err
+    if order_by and len(set(order_by)) < len(order_by):
+        detail = "Fields to order by must be unique"
+        raise HTTPException(status_code=422, detail=detail)
+    try:
+        sorting_parameters = [
+            models.SortingParameter(field=field, order=order)
+            for field, order in zip(order_by or [], sort or [], strict=True)
+        ]
+    except ValueError as err:
+        detail = "Number of fields to order by must match number of sort options"
+        raise HTTPException(status_code=422, detail=detail) from err
     try:
         results = await query_handler.handle_query(
-            class_name=parameters.class_name,
-            query=parameters.query,
-            filters=parameters.filters,
-            skip=parameters.skip,
-            limit=parameters.limit,
-            sorting_parameters=parameters.sorting_parameters,
+            class_name=class_name,
+            query=query,
+            filters=filters,
+            skip=skip,
+            limit=limit,
+            sorting_parameters=sorting_parameters,
         )
     except query_handler.ClassNotConfiguredError as err:
         raise HTTPException(
