# src/mass/core/query_handler.py
@@ -97,7 +97,7 @@ class QueryHandler(QueryHandlerPort):
 
         # get configured facet fields for given resource class
         try:
-            facet_fields: list[models.FacetLabel] = self._config.searchable_classes[
+            facet_fields: list[models.PropertyLabel] = self._config.searchable_classes[
                 class_name
             ].facetable_properties
         except KeyError as err:
